feat: add health check
